# neuro-behavioral-models

./: README.md  setup.cfg  setup.py
neuro_behavioral_models/: __init__.py  categorical_gaussian_hmm.py  higher_hmm.py  hmm.py  util.py
