[metadata]
name = neuro-behavioral-models
author = Caleb Weinreb
author_email = calebsw@gmail.com
url = https://github.com/calebweinreb/neuro-behavioral-models
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
include_package_data = True
python_requires = >=3.8
install_requires =
    numba>=0.56.4
    dynamax>=0.1.2
    chex==0.1.6
    jaxtyping==0.2.14
    tensorflow_probability==0.19.0
    tqdm

[options.package_data]
* = *.md